# postgre-dbt-core

./: README.md  app.py  produtos.csv  pyproject.toml  vendas.csv
dbt_modelagem/: dbt_project.yml
dbt_modelagem/models/: sources.yml
dbt_modelagem/models/bronze/produto/: bronze_produtos.sql
dbt_modelagem/models/bronze/venda/: bronze_vendas.sql
dbt_modelagem/models/gold/: gold_loja.sql
dbt_modelagem/models/silver/: silver_join.sql
